--- a/os/Makefile
+++ b/os/Makefile
@@ -1,6 +1,8 @@
 obj-m := diting.o
 diting-objs := diting_start.o diting_nolockqueue.o\
-	diting_util.o diting_bprm.o
+	diting_util.o diting_bprm.o diting_ktask.o\
+	diting_door.o diting_access.o diting_sysctl.o\
+
 
 KERNELDIR = /lib/modules/$(shell uname -r)/build/
 KERNELBIT = $(shell getconf LONG_BIT)
